Fix double scrollbars by removing overflow-y CSS

--- a/css/style.css
+++ b/css/style.css
@@ -19563,5 +19563,4 @@ Sidebar
 html, body { overflow-x: hidden !important; max-width: 100%; }
 
 
-html, body { overflow-y: visible !important; }
 
